chore: workflow dispatch and separate jobs

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,15 +1,19 @@
 name: Hello World Example
 
 on:
-  push:
+  workflow_dispatch:
+
+runs-on: self-hosted
 
 jobs:
-  build:
-    runs-on: self-hosted
-
+  local_hello:
     steps:
     - name: Say hello
       run: echo Hello, world!
 
+  docker_hello:
+    steps:
     - name: Hello again
       run: docker run hello-world
+
+  
